--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,11 +1,14 @@
-/* This is a multi-line
-comment. Add your CSS code
-from Unit 1 - 5 below  */
 
-/*
-body {
-	text-align: center;
-}*/
+.card {
+	float: left;
+	margin: 8%;
+	height: 200px;
+	width: 150px;
+	border-radius: 10px;
+	border: 1px solid black;
+	background-color: #91349C;
+}
+
 h1 {
 	color: #4D3D4F;
 	text-align: center;
@@ -50,16 +53,6 @@ a:hover {
 	width: 50%;
 }
 
-.card {
-	float: left;
-	margin: 8%;
-	height: 200px;
-	width: 150px;
-	border-radius: 10px;
-	border: 1px solid black;
-	background-color: #91349C;
-}
-
 .card:hover {
 	background-color: #61A996;
 }
@@ -81,3 +74,9 @@ footer {
 	background-color: #808080;
 	text-align: center;
 }
+
+img {
+	height: 200px;
+  width: 150px;
+}
+
